main.css
/* ... */
.part :is(h1,.part-utils,.abceditor,.abcEditor-utils){
  position: sticky;
  top: var(--header_height);
  z-index: 2;
}
.abcEditor-utils{
  z-index: 3 !important;
  display: flex;
  border: 1px solid;
  border-bottom: none;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  margin: 0 6px;
  padding: 0 6px;
  top: calc(var(--header_height) + 26px) !important;
}
.abcEditor-utils.hidden{
  display: none !important;
}
.ui-menu.editorUtilMenu {
  position: absolute;
  top: calc(1em + 6px);
  width: max-content;
  display: none;
}
.editorUtilMenu .ui-menu-item-wrapper {
  /* ui menu items */
  padding-left: 0.5em;
}
.editorUtilMenuToggle {
  line-height: 150%;
  background: #ddd;
  padding: 0 2px;
}

.part .abcEditor {
  top: calc(var(--header_height) + 50px);
}

.part{
  position: relative;
}

/* hidden part */
.part.hidden :is(.extra_html, .instrument_tunes, .abc-warnings, .abcEditor, .abcEditor-utils){
  display: none !important;
}
.part.hidden h1{
  font-size: 20px;
}
.part.hidden .part-utils{
  font-size: 12px;
}

/* HIGHLIGHTING */
#tunes_container {
  --cStringColor: purple;
  --gStringColor: green;
  --dStringColor: blue;
  --aStringColor: #ff4700;
  --eStringColor: teal;
}

:not(.highlight_notes) .abcjs-note {
  --selection_glow: #000;
}

/* C String */
.highlight_notes .cString,
.highlight_notes .cString ~ :is(.abcjs-fingering, .abcjs-noteName){
  --selection_glow: var(--cStringColor);
  fill: var(--cStringColor);
}

/* G String */
.highlight_notes .gString,
.highlight_notes .gString ~ :is(.abcjs-fingering, .abcjs-noteName){
  --selection_glow: var(--gStringColor);
  fill: var(--gStringColor);
}

/* D String */
.highlight_notes .dString,
.highlight_notes .dString ~ :is(.abcjs-fingering, .abcjs-noteName){
  --selection_glow: var(--dStringColor);
  fill: var(--dStringColor);
}

/* A String */
.highlight_notes .aString,
.highlight_notes .aString ~ :is(.abcjs-fingering, .abcjs-noteName){
  --selection_glow: var(--aStringColor);
  fill: var(--aStringColor);
}

/* E String */
.highlight_notes .eString,
.highlight_notes .eString ~ :is(.abcjs-fingering, .abcjs-noteName){
  --selection_glow: var(--eStringColor);
  fill: var(--eStringColor);
}

/* selected note */
.abcjs-note_selected {
  fill: var(--selection_glow);
  filter: drop-shadow(0px 0px 6px var(--selection_glow));
}
/* deselected note */
:is(.abcjs-note, .abcjs-rest):not(.abcjs-note_selected) {
  fill: #000;
  stroke: none;
}

/* text annotations
    text annotations have text-anchor="start", fignerings have text-anchor="middle"
*/
text.abcjs-annotation[text-anchor="start"] {
  fill: #000;
}
/* move text annotations attatched to the last barline, down closer to the barline
      otherwise it was looking like it was text below the line above.
*/
.abcjs-bar:last-of-type text.abcjs-annotation[text-anchor="start"] {
  transform: translate(0px, 10%);
}
/* note letter names */
.abcjs-annotation.noteLetterName {
  fill: inherit !important;
}

/* FINGERING AND LETTER NAME VISIBILITY */
.abcjs-fingering,
.abcjs-noteName{
  opacity: 0;
  transition: opacity 400ms ease-in-out;
}
#main_container:has(#fingerings_toggle.active) .abcjs-fingering,
#main_container:has(#notenames_toggle.active) .abcjs-noteName{
  opacity: 100%;
}
.abcjs-note_selected .abcjs-fingering,
.abcjs-note_selected .abcjs-noteName {
  opacity: 100%;
}

/* FINGERING POSITIONING */
/* svg elements can be translated via the transform property */
.part{
  --notehead_height: 5px;
}
.part[instrument="violin"]{
  --notehead_height: 4px;
}
/* Above Staff */
/* 1 notehead height above (0 ledger lines) */
.part[instrument="violin"] path[data-name="e"] ~ .abcjs-fingering,
.part[instrument="viola"] path[data-name="A"] ~ .abcjs-fingering,
.part[instrument="cello"] path[data-name="B"] ~ .abcjs-fingering,
.part[instrument="bass"] path[data-name="B"] ~ .abcjs-fingering,
/*    Notes whose beams go above (2nd line) */
.part[instrument="violin"] :is(.abcjs-d0-125, .abcjs-d0-063, .abcjs-d0-031, .abcjs-d0-016) path[data-name="G"] ~ .abcjs-fingering,
.part[instrument="viola"] :is(.abcjs-d0-125, .abcjs-d0-063, .abcjs-d0-031, .abcjs-d0-016) path[data-name="A,"] ~ .abcjs-fingering,
.part:is([instrument="cello"],[instrument="bass"]) :is(.abcjs-d0-125, .abcjs-d0-063, .abcjs-d0-031, .abcjs-d0-016) path[data-name="B,"] ~ .abcjs-fingering
 {
  transform: translate(0px, calc(var(--notehead_height) * -1));
}
/* 2 notehead heights above (1 ledger lines) */
.part[instrument="violin"] path[data-name="f"] ~ .abcjs-fingering,
.part[instrument="viola"] path[data-name="B"] ~ .abcjs-fingering,
.part[instrument="cello"] path[data-name="c"] ~ .abcjs-fingering,
.part[instrument="bass"] path[data-name="c"] ~ .abcjs-fingering,
/*    Notes whose beams go above (2nd space) */
.part[instrument="violin"] :is(.abcjs-d0-125, .abcjs-d0-063, .abcjs-d0-031, .abcjs-d0-016) path[data-name="A"] ~ .abcjs-fingering,
.part[instrument="viola"] :is(.abcjs-d0-125, .abcjs-d0-063, .abcjs-d0-031, .abcjs-d0-016) path[data-name="B,"] ~ .abcjs-fingering,
.part:is([instrument="cello"],[instrument="bass"]) :is(.abcjs-d0-125, .abcjs-d0-063, .abcjs-d0-031, .abcjs-d0-016) path[data-name="C"] ~ .abcjs-fingering{
  transform: translate(0px, calc(var(--notehead_height) * -2));
}
/* ... */

